--- a/app.wxss
+++ b/app.wxss
@@ -9,12 +9,14 @@ page {
 
 tab-shadow {
   position: fixed;
-  bottom: 0;
+  bottom: -99rpx;
   left: 0;
   right: 0;
-  height: 0;
+  height: 100rpx;
   border-top: 1rpx solid #eee;
-} 
+  z-index: 9999999;
+  box-shadow: 0 0 30rpx rgba(0, 0, 0, .05);
+}
 
 text {
   cursor: default;
