--- a/pages/activity/activity.wxml
+++ b/pages/activity/activity.wxml
@@ -1,10 +1,13 @@
-<swiper wx:if="{{ $service.sliderviews.length }}" duration="300" autoplay="1" interval="5000" bindchange="onSwiperChange" current="{{ curIndex }}" style="overflow: visible;">
+<swiper duration="300" autoplay="1" interval="5000" bindchange="onSwiperChange" current="{{ curIndex }}" style="overflow: visible;">
     <swiper-item wx:for="{{ $service.sliderviews }}" style="overflow: visible;" wx:key="imageurl">
         <image src="{{ item.imageurl }}" style="width: 100%; height: 300rpx; background: #fff; box-shadow: 0 10rpx 15rpx rgba(0, 0, 0, .1); -webkit-transform: scale({{ curIndex == index ? 0.9 : 0.65 }}) translate({{ (curIndex == index - 1 || curIndex == index + 1) ? (curIndex - index) * 30 : 0 }}%, 0); -webkit-transition: .3s; position: relative;" catchtap="open" data-url="{{ item.url }}" mode="aspectFill"/>
         <view class="horizontal">
           <view class="tag recommend">编辑推荐</view>
           <text class="title">{{ item.title }}</text>
         </view>
+    </swiper-item>
+    <swiper-item wx:if="{{ !$service.sliderviews.length }}">
+      <view class="empty">…</view>
     </swiper-item>
 </swiper>
 
