--- a/pages/calculateGpa/calculateGpa.wxml
+++ b/pages/calculateGpa/calculateGpa.wxml
@@ -1,12 +1,22 @@
-<view class="result">
-  <text class="hint">估算结果：</text>
-  <text class="num">{{ result }}</text>
-  <text class="hint">，请手动进行修正 (删去自选课等)</text>
+<view class="select-mode">
+  <view class="result">
+    <text class="select">选择计算方法：</text>
+    <picker bindchange="modeChange" value="{{ mode }}" range="{{ methods }}">
+        <text class="mode">{{ methods[mode] }}</text>
+    </picker>
+  </view>
+  <view class="result">
+    <text class="hint">估算结果：</text>
+    <text class="num" wx:if="{{ mode == 0 }}">{{ result[0] }}</text>
+    <text class="num" wx:else>{{ result[1] }}</text>
+    <text class="hint">，请手动进行修正 (删去自选课等)</text>
+  </view>
 </view>
 <view class="item" wx:for="{{ gpa }}">
   <view class="left">
     <text class="name">{{ item.name }}</text>
-    <text class="info">{{ item.credit }} * {{ item.point }} = {{ item.credit * item.point }}</text>
+    <text class="info" wx:if="{{ mode == 0 }}">{{ item.credit }} * {{ item.point }} = {{ item.credit * item.point }}</text>
+    <text class="info" wx:else>{{ item.credit }} * {{ item.point_wes }} = {{ item.credit * item.point_wes }}</text>
   </view>
   <text class="credit">{{ item.score }}</text>
   <button class="remove" catchtap="remove" data-index="{{ index }}">－</button>
