--- a/pages/calculateGpa/calculateGpa.wxss
+++ b/pages/calculateGpa/calculateGpa.wxss
@@ -1,6 +1,6 @@
-.result {
+.select-mode {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   position: sticky;
   position: -webkit-sticky;
@@ -11,6 +11,38 @@
   background: #fff;
   box-shadow: 0 5rpx 15rpx rgba(0, 0, 0, .05);
   justify-content: space-between;
+}
+
+.select {
+  font-size: 26rpx;
+  color: #888;
+  margin-right: 10rpx;
+}
+
+.mode {
+  font-size: 30rpx;
+  color: #333;
+}
+
+.result {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /*position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 999;
+  padding: 0 35rpx;
+  margin-bottom: 20rpx;
+  background: #fff;
+  box-shadow: 0 5rpx 15rpx rgba(0, 0, 0, .05);
+  justify-content: space-between; */
+}
+
+.result picker {
+  width: 200rpx;
+  height: 40rpx;
+  overflow: hidden;
 }
 
 .result .hint {
