--- a/pages/calculateGpa/calculateGpa.wxss
+++ b/pages/calculateGpa/calculateGpa.wxss
@@ -38,7 +38,7 @@
 .item {
   padding: 20rpx 0;
   margin: 0 40rpx;
-  border-bottom: 1rpx solid #f0f0f0;
+  border-top: 1rpx solid #f0f0f0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -113,6 +113,5 @@
   color: #888;
   padding: 30rpx 0;
   margin: 0 40rpx;
-  border-bottom: 1rpx solid #f0f0f0;
   text-align: left;
 }
