--- a/components/server_down/server_down.wxss
+++ b/components/server_down/server_down.wxss
@@ -5,6 +5,8 @@ server-down {
   justify-content: center;
   padding: 50rpx;
   position: relative;
+  margin-top: 20rpx;
+  background: #fff;
 }
 
 server-down.guest {
