--- a/pages/cardCharge/cardCharge.wxml
+++ b/pages/cardCharge/cardCharge.wxml
@@ -7,7 +7,7 @@
   </line>
   <line>
     <text class="hint">记住密码（本机有效）</text>
-    <switch color="#3688ff" checked="{{ remember }}" bindchange="onRememberChange"/>
+    <switch color="#d61518" checked="{{ remember }}" bindchange="onRememberChange"/>
   </line>
   <line class="amount">
     <button wx:for="{{ [50, 100, 200, 300, 500] }}" class="{{ amount == item ? 'selected' : '' }}"
