--- a/pages/activity/activity.wxml
+++ b/pages/activity/activity.wxml
@@ -16,7 +16,7 @@
     <image src="/images/ic_activity.png" mode="aspectFit"/>
     <text>热门活动</text>
     <space/>
-    <text class="button" catchtap='viewimg' data-current='http://static.myseu.cn/2017-11-08-2017-activity-advertising.jpg?{{ timestamp }}'>免费投放</text>
+    <text class="button" catchtap='open' data-url='mailto:ad@myseu.cn'>免费投放</text>
   </view>
   <view class="activity" wx:for="{{ activity }}" catchtap="open" data-url="{{ item.detail_url }}">
     <view class="horizontal">
@@ -25,8 +25,8 @@
     </view>
     <image class="pic" src="{{ item.pic_url }}" mode="aspectFill"/>
     <text class="intro">{{ item.introduction }}</text>
-    <text class="time">时间：{{ item.activity_time }}</text>
-    <text class="location">地点：{{ item.location }}</text>
+    <!-- <text class="time">时间：{{ item.activity_time }}</text>
+    <text class="location">地点：{{ item.location }}</text> -->
   </view>
 </view>
 
