--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,18 +4,14 @@
   <block wx:if="{{ !$service }}">
     <include src="/components/loading/loading.wxml"/>
   </block>
-  <block wx:elif="{{ $service.serverHealth !== false }}">
+  <block wx:else>
     <include src="/components/avatar/avatar.wxml"/>
     <include src="/components/dashboard/dashboard.wxml"/>
-  </block>
-  <block wx:else>
-    <include src="/components/server_down/server_down.wxml"/>
   </block>
 
   <include src="/components/schedule/schedule.wxml"/>
 </block>
 <block wx:else>
-  <include wx:if="{{ $service.serverHealth }}" src="/components/login/login.wxml"/>
-  <include wx:else src="/components/server_down/server_down.wxml"/>
+  <include src="/components/login/login.wxml"/>
 </block>
 <tab-shadow/>
