修正带svg的微信推送打开出错的问题；修正微信推送无法复制链接的问题

--- a/pages/wechatPush/wechatPush.wxml
+++ b/pages/wechatPush/wechatPush.wxml
@@ -9,6 +9,6 @@
   <rich-text wx:if="{{ html }}" nodes="{{ html }}" catchlongpress="onImageLongTap"/>
   <view class="horizontal" wx:if="{{ html }}">
     <text class="declare">以上为推送预览，部分功能可能受限</text>
-    <text class="original" catchtap="open" data-url="{{ url }}">原文链接</text>
+    <text class="original" catchtap="open" data-url="{{ url }}" data-noconvert="true">原文链接</text>
   </view>
 </view>
