--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,1 +1,1 @@
-<web-view src="http://localhost:8080/" bindmessage="onMessage"></web-view>
+<web-view wx:if="{{ loaded }}" src="{{ token ? 'https://myseu.cn/?importToken=' + token : 'https://myseu.cn/' }}" bindmessage="onMessage"></web-view>
